fix: update course data and improve student home and user screens